--- a/AppleHardwareStore/Views/Home/Index.cshtml
+++ b/AppleHardwareStore/Views/Home/Index.cshtml
@@ -1,8 +1,31 @@
-﻿@{
-    ViewData["Title"] = "Home Page";
+﻿@model List<AppleHardwareStore.Models.ProductType>
+@{
+    ViewData["Title"] = "ProductTypes";
 }
 
-<div class="text-center">
-    <h1 class="display-4">Welcome</h1>
-    <p>Learn about <a href="https://docs.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
+<div class="container">
+    <div class="card col-12">
+        <div class="card-header">
+            <h3>Product types</h3>
+        </div>
+        <div class="card-body">
+            <table class="table">
+                <thead class="thead-dark">
+                <tr>
+                    <th>Id</th>
+                    <th>Name</th>
+                </tr>
+                </thead>
+                <tbody>
+                @foreach (var productType in Model)
+                {
+                    <tr>
+                        <td>@productType.Id</td>
+                        <td>@productType.Name</td>
+                    </tr>
+                }
+                </tbody>
+            </table>
+        </div>
+    </div>
 </div>
