--- a/AppleHardwareStore/Views/Home/Index.cshtml
+++ b/AppleHardwareStore/Views/Home/Index.cshtml
@@ -8,6 +8,9 @@
         <div class="card-header">
             <h3>Product types</h3>
         </div>
+        <label>
+            @ViewBag.Message
+        </label>
         <div class="card-body">
             <table class="table">
                 <thead class="thead-dark">
