--- a/AppleHardwareStore/Views/Home/Index.cshtml
+++ b/AppleHardwareStore/Views/Home/Index.cshtml
@@ -1,34 +1,32 @@
-﻿@model List<AppleHardwareStore.Models.ProductType>
+﻿@model List<AppleHardwareStore.Models.ProductType> 
 @{
-    ViewData["Title"] = "ProductTypes";
+    ViewData["Title"] = "AppleStore";
 }
 
 <div class="container">
-    <div class="card col-12">
-        <div class="card-header">
-            <h3>Product types</h3>
-        </div>
-        <label>
-            @ViewBag.Message
-        </label>
-        <div class="card-body">
-            <table class="table">
-                <thead class="thead-dark">
-                <tr>
-                    <th>Id</th>
-                    <th>Name</th>
-                </tr>
-                </thead>
-                <tbody>
-                @foreach (var productType in Model)
-                {
-                    <tr>
-                        <td>@productType.Id</td>
-                        <td>@productType.Name</td>
-                    </tr>
-                }
-                </tbody>
-            </table>
-        </div>
-    </div>
+     <div class="card col-12">
+          <div class="card-header">
+              <h3>ProductTypes</h3>
+          </div>
+
+          <div class="card-body">
+              <table class="table">
+                  <thead class="thead-dark">
+                  <tr>
+                      <th>Id</th>
+                      <th>Name</th>
+                  </tr>
+                  </thead>
+                  <tbody>
+                  @foreach (var productType in Model)
+                  {
+                      <tr>
+                          <td>@productType.Id</td>
+                          <td>@productType.Name</td>
+                      </tr>
+                  }
+                  </tbody>
+              </table>
+          </div>
+      </div>
 </div>
